[B][COLOR gold]v4.01.07-9[/COLOR][/B]
- Trailers:
    Added new trailer searching method through TMDb.
    This method does not require a YouTube API key to be set.
    Can be enabled as default trailer search method in settings,
    but add-on will also fallback to it if YouTube method fails.
- Channels category fixes/enhancements - thx JewBMX for the help

[B][COLOR gold]v4.01.06[/COLOR][/B]
- Logging tweaks
- Indexers tweaks

[B][COLOR gold]v4.01.05[/COLOR][/B]
- Fixed seasons not loading for some shows

[B][COLOR gold]v4.01.04[/COLOR][/B]
- Indexers tweaks

[B][COLOR gold]v4.01.03[/COLOR][/B]
- Code cleanup

[B][COLOR gold]v4.01.02[/COLOR][/B]
- Size filtering changes:
    Min/Max movie/episode size settings removed, and replaced with new Min/Max
    GB per hour setting, that applies to both movies & episodes
- Added new [I]Scrape Unfiltered[/I] context menu entry, that when triggered the add-on
  starts scraping with all sources filters (incl. pre-emptive termination) ignored

[B][COLOR gold]v4.01.01[/COLOR][/B]
- Fixed some py2/Kodi pre-19 encoding issues
- Removed Cloudflare protected scrapers disableing option
  (cloudflare anti-bot protection bypassing doesn't work anymore so
   relevant scrapers get removed from package)
- Source quality/type identification tweaks

[B][COLOR gold]v4.01.00[/COLOR][/B]
- Movies metadata main indexer altered from Trakt to TMDb
- Changes to metadata to ensure we always use the international title for scraping

[B][COLOR gold]v4.00.36[/COLOR][/B]
- Fixed some issues with special episodes
- Fixed notification on failed download attempt

[B][COLOR gold]v4.00.35[/COLOR][/B]
- Subtitles: workaround Kodi's issue with forced Greek subtitles setting

[B][COLOR gold]v4.00.34[/COLOR][/B]
- Minor metadata and playback fixes

[B][COLOR gold]v4.00.33[/COLOR][/B]
- Subtitles fix for Kodi 19

[B][COLOR gold]v4.00.32[/COLOR][/B]
- Changes to the settings cleaning function

[B][COLOR gold]v4.00.31[/COLOR][/B]