@@ -1,3 +1,7 @@
+[B][COLOR gold]v4.01.10[/COLOR][/B]
+- Fixed TMDb trailers listed twice
+- Tweaked YouTube trailers search query
+
 [B][COLOR gold]v4.01.07-9[/COLOR][/B]
 - Trailers:
     Added new trailer searching method through TMDb.
